# Serial_Interchange_Arduino

./: LICENSE  README.md  config.py  pyproject.toml
serial_interchange/: arduino_serial_client.py  rs485.py  serial_tx_msg.ino
serial_interchange/tests/: conftest.py  pytest.ini  test_arduino_serial_client.py
